--- a/cloudformationstudy.yml
+++ b/cloudformationstudy.yml
@@ -45,3 +45,51 @@ Resources:
     Properties: 
       RouteTableId: !Ref privateroutetable
       SubnetId: !Ref privatesubnet2
+
+  ec2securitygroup: 
+    Type: AWS::EC2::SecurityGroup
+    Properties: 
+      GroupDescription: ec2-securitygroup
+      SecurityGroupEgress: 
+        - IpProtocol: -1
+          FromPort: -1
+          ToPort: -1
+          CidrIp: 0.0.0.0/0
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIpv6: ::/0
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIpv6: ::/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: #自分のIPアドレス入力
+      VpcId: #vpcid入力
+
+  rdssecuritygroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties: 
+      GroupDescription: rds-securitygroup
+      SecurityGroupEgress: 
+        - IpProtocol: -1
+          FromPort: -1
+          ToPort: -1
+          CidrIp: 0.0.0.0/0
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 3306
+          ToPort: 3306
+          SourceSecurityGroupId: !Ref ec2securitygroup
+      VpcId: #vpcid入力
