add parameter section

--- a/cloudformationstudy.yml
+++ b/cloudformationstudy.yml
@@ -2,29 +2,45 @@ AWSTemplateFormatVersion: "2010-09-09"
 
 Description: cloudformation study
 
+#パラメータ
+Parameters:
+  vpcid:
+    Type: AWS::EC2::VPC::Id
+    Description: Enter vpcid
+  
+  privatesubnet1CidrBlock: 
+    Type: String
+    Description: Enter privatesubnet1 CidrBlock
+
+  privatesubnet2CidrBlock: 
+    Type: String
+    Description: Enter privatesubnet2 CidrBlock
+
+
+
 #リソース
 Resources:
   privatesubnet1:
     Type: AWS::EC2::Subnet
     Properties: 
       AvailabilityZone: ap-northeast-1a
-      CidrBlock: 172.31.48.0/20
+      CidrBlock: !Ref privatesubnet1CidrBlock
       MapPublicIpOnLaunch: true
       Tags:
           - Key: Name
             Value: privatesubnet1
-      VpcId: #vpcid入力
+      VpcId: !Ref vpcid
 
   privatesubnet2:
     Type: AWS::EC2::Subnet
     Properties: 
       AvailabilityZone: ap-northeast-1c
-      CidrBlock: 172.31.64.0/20
+      CidrBlock: !Ref privatesubnet2CidrBlock
       MapPublicIpOnLaunch: true
       Tags:
           - Key: Name
             Value: privatesubnet2
-      VpcId: #vpcid入力
+      VpcId: !Ref vpcid
 
   privateroutetable:
     Type: AWS::EC2::RouteTable
@@ -32,7 +48,7 @@ Resources:
       Tags:
         - Key: Name
           Value: privateroutetable
-      VpcId: #vpcid入力
+      VpcId: !Ref vpcid
   
   routetableattach1:
     Type: AWS::EC2::SubnetRouteTableAssociation
